--- a/Web Development/FruitsMongoose/package.json
+++ b/Web Development/FruitsMongoose/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "FruitsNativeDriver",
+  "name": "FruitsMongoose",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "dependencies": {
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.13.2"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "mongodb": "^3.6.10"
-  }
+  "license": "ISC"
 }
